--- a/back/api/package.json
+++ b/back/api/package.json
@@ -14,6 +14,7 @@
     "argon2": "^0.41.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.13.0"
+    "mysql2": "^3.13.0",
+    "zod": "^3.24.2"
   }
 }
